fixed overlapping in <h1> tag at 320px

--- a/style.css
+++ b/style.css
@@ -203,7 +203,10 @@ h1 {
 
 @media only screen and (max-width: 320px) {
     .testimonial h1 {
-        font-size: 2rem;
+        display: flex;
+        justify-content: center;
+        align-items: center;
+        font-size: 1.5rem;
     }
 
     .about-intro {
